Fix jQuery UI and iCheck style changes - Fix text appearing darker in events & date tab and measurement setting list - Fix "Squash Layer" button missing border and padding - Fix color palettes radio "check" buttons missing thick borders - Fix "Add Layers" button font changed by default jQuery UI font stack

--- a/web/css/sidebar.css
+++ b/web/css/sidebar.css
@@ -42,6 +42,8 @@
 }
 
 #productsHolder footer .action {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
   display: inline-block;
   border-color: transparent;
   color: #fff;
